<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">养车助手</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <!-- 上拉加载，下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="skin_tabbar_icon_homepage">首页</string>
    <string name="skin_tabbar_icon_seller">商家</string>
    <string name="skin_tabbar_icon_mycenter">我的</string>
    <string name="skin_tabbar_icon_questions">题库</string>
    <string name="skin_tabbar_icon_settled">我要入駐</string>
    <string name="register_right_now">立即注册</string>
    <string name="skin_tabbar_icon_at">与我相关</string>
    <string name="have_no_account">还没有账号?</string>
    <string name="skin_tabbar_icon_more">玩吧</string>
    <string name="login">登录</string>
    <string name="login_after">登录养车助手</string>
    <string name="confirm_login">确认并登录</string>
    <string name="set_password">设置密码</string>
    <string name="foget_password">忘记密码？</string>
    <string name="skip">跳过</string>
    <string name="user_name">请输入手机号 </string>
    <string name="user_vertify">请输入验证码 </string>
    <string name="input_password">请重新输入密码 </string>
    <string name="re_input_password">请再次输入密码 </string>
    <string name="have_password">已有账号？ </string>
    <string name="password">请输入登录密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="verify_register">验证并注册</string>
    <string name="forget_password_next">下一步</string>
    <string name="phone_num_can_not_be_empty">电话号码不能为空</string>
    <string name="please_click_agree">请点击同意</string>
    <string name="connecting">正在加载</string>
    <string name="home_page_notice">{公告}:</string>
    <string name="forget_get_code">获取验证码</string>
    <string name="suc_to_get_code">成功获取验证码</string>
    <string name="fail_to_get_code">获取验证码失败</string>
    <string name="connecting_to_server">正在连接服务器</string>
    <string name="join_name">姓名：</string>
    <string name="join_adress">公司地址：</string>
    <string name="join_cmp_name">公司名称：</string>
    <string name="join_tel">联系方式：</string>
    <string name="join_in">我要入驻</string>
    <string name="all_region">全部区域</string>
    <string name="distance">距离</string>
    <string name="good_option">好评率</string>
    <string name="seller">商家</string>
    <string name="default_cmp_name">合肥市君辉汽车有限公司</string>
    <string name="default_cmp_option">2500人评价</string>
    <string name="default_cmp_address">地址：中国科学技术大学西区中国科学技术大学西区中国科学技术大学西区</string>
    <string name="default_cmp_order">已成交245</string>
    <string name="default_cmp_distance">1.6km</string>
    <string name="join_hint">您好！欢迎您申请养车助手的商家入驻，请您务必详细填写下面的信息，我们将在3个工作日内安排专门的客服与您联系，谢谢合作！</string>
    <string name="appName">demoapp</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">\u3000\u3000感谢你的爱心，\n但是系统出现了一些错误</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="head">这里是HeadView</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>