<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/textView1"
            android:layout_marginLeft="19dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#474747"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/shop_foget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView1"
            android:text="@string/foget_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#474747"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_account" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingLeft="30dip"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_username"
            android:layout_marginTop="1dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_pwd" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="30dip"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/ciicleshape"
                android:gravity="center"
                android:onClick="loginOnclick"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_login_btn"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_no_account" />

            <TextView
                android:id="@+id/register_now"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:onClick="registerNow"
                android:paddingLeft="5dp"
                android:text="@string/register_right_now"
                android:textColor="#D52B2B" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>