<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/set_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#474747"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:paddingRight="40dp"
            android:src="@drawable/dingbu_fanhui2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reset_pass_find"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:background="#fff" >

        <ImageView
            android:id="@+id/iv_setpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dl_mima" />

        <EditText
            android:id="@+id/set_password_find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_setpassword"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_setpassword_ll"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/reset_pass_ll"
        android:layout_marginTop="1dp"
        android:background="#fff" >

        <ImageView
            android:id="@+id/iv_reset_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dl_mima" />

        <EditText
            android:id="@+id/reset_psss_et_find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_reset_pass"
            android:background="@null"
            android:hint="@string/re_input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re_setpassword_ll"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/ciicleshape"
            android:gravity="center"
            android:onClick="modifyPassWord"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/confirm_login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>